# ai-companion

./: .gitignore  4h_test.py  FIXES_APPLIED.md  HERMES_TASK_REPORT_20260514_MCP_BRIDGE_RUNTIME.md  HERMES_TASK_REPORT_20260514_MINIMAX_MCP_NETWORK_CORRECTION.md  HERMES_TASK_REPORT_20260514_NETWORK_RUNTIME.md  HERMES_TASK_REPORT_20260514_NETWORK_RUNTIME_CORRECTED.md  HERMES_TASK_REPORT_20260514_NETWORK_RUNTIME_LAYERED.md  HERMES_TASK_REPORT_20260514_SETTINGS_LONGTEST.md  README.md  TEST_PLAN.md  capture_ai_companion.ps1  capture_window.ps1  focus_app.ps1  get_windows.ps1  longterm_test.js  longtest_200_report.json  network_e2e_report.json  network_runtime_verify_report.json  package.json  pnpm-lock.yaml  run-app.bat  screenshot.ps1  settings_final_result.json  simple_test.cjs  tailwind.config.js  test4h.cjs  test_200_mcp.py  test_200_v2.py  test_api.py  test_messages.py  test_webview.html  ui_tree_discovery.py
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
backup/20260514_075548/: CharacterDisplay.tsx  useCompanion.ts
backup/20260514_082242/: BottomToolbar.tsx
backup/20260514_105158/: lib.rs
backup/20260514_183034/: ChatPanel.tsx  ScreenWatcher.tsx
backup/20260514_183038/: proactiveChat.ts
docs/: AI_COMPANION_NETWORK_SEARCH_BACKUP_REPORT.md
report/: 2026-05-14_AI_COMPANION_TEST_REPORT.md
test_outputs/: test_results.json  verify_behavior.cjs
(+92 files in other folders)
