[package]
name = "ai-companion-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_companion_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ai-companion-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-fs = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.39.0", features = ["bundled"] }
screenshots = "0.8"
base64 = "0.21"
image = "0.25"

[profile.release]
panic = "abort"
codegen-units = 1
# lto = true
opt-level = "s"
# strip = true
